made frontend prettier

--- a/frontend-new/tsconfig.json
+++ b/frontend-new/tsconfig.json
@@ -26,6 +26,5 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "components", "app", "lib", "hooks"]
 }
